* Extended features for taking over filters for detail export and drill

.Backward Incompatibilities:
. dm:FilterTranslation, dm:DimensionTranslation and dm:PeriodTranslation were renamed to dm:FT, dm:DT and dm:PT
. dm:FilterTranslation toRangeWhen attribute was moved to dm:PeriodTranslation
. LoginServlet was removed, adjust web.xml and let loginform have action=""

==== Release 5_1_0

.Major new features:

. Components: Scorecard, Cube, Charts, Export
* Added Scorecard configurator with a drag'n drop area similar to the cube one
* Scorecard new scc:Description element in configuration, picked up by tooltip
* Scorecard new scc:Kpi/@skipAspects allows to list space separated per kpi, which aspects do not apply. Per default bcdFailure and bcdFrequeny are disabled for KPI which are not of type i/t
* dm:Measure element has got dm:Categories definition, currently supported by Free Analysis Report component (FAR)
* new dm:DimensionsAndMeasures/dm:Dimensions/dm:DimensionRef element now references dm:Levels of entire Dimension from /bcdui/conf/dimensions.xml
* new dm:CategoryTypes element defining a global set of categories used for Dimensions and Levels in /bcdui/conf/categories.xml

. Widgets
* New widget: Added dropDown Button functionality
* PeriodChooser has quick-pick options for LastDay/Week/Month (depending on the allowed options)
* DimensionChooser has new parameter to limit number of shown levels
* SideBySideChooser has new parameter doSortOptions to enable/disable sorting of optionsmodel (default is true)
* SideBySideChooser has got up/down controls to rearrange target selection

. Core
* bcdui.core.DataProviderWithXPathNodes can now be used as input model for transformations.

. Security / Bindings / WebRowSet
* Preventing XML injection via entities and XIncludes for client provided files

. Build / Dev / Docu
* Eclipse ApiStubs for IDE autosuggest is now one file only